--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
-<html>
-<head>
-<title>Client</title>
+<html lang="en">
+    <head>
+    <meta charset="UTF-8"> <!--can read th -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login</title>
+    <link rel="stylesheet" href="/Lab3/index.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body>
-
-<h1 style="color:blue;">Hello Test</h1>
-<p>This is a paragraph.</p>
-
+    <body>
+        <div class="container">
+        <h1>Login</h1>    
+        <link rel="stylesheet" href="index.css"> 
+            <form action="">
+                <input type="text" name="username" id="username" placeholder="user name">
+                <br>
+                <input type="text" name="password" id="password" placeholder="password">
+                <br>
+            <div class="button">
+                <button>Sign-in</button>
+            </div>
+            </form>
+</div>
 </body>
 </html>
