Kimetsu no Yaiba Studio

--- a/Homework3/Home.html
+++ b/Homework3/Home.html
@@ -1,39 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-    <meta charset="UTF-8"> <!--can read th -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="stylesheet" href="/Homework3/Home.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<head>
+  <title>Kimetsu no Yaiba Studio</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/Homework3/Home.css">
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 </head>
-    <body>
-        <div class="container">
-        <h1>Login</h1>    
-        <link rel="stylesheet" href="index.css"> 
-            <form action="">
-                <input type="text" name="username" id="username" placeholder="user name">
-                <br>
-                <input type="text" name="password" id="password" placeholder="password">
-                <br>
-            <div class="button">
-                <button onclick="sigin()">Sign-in</button>
-            </div>
-            </form>
-            <script>
-        function sigin() {
-            var p1 = document.getElementById("username").value;
-            var p2 = document.getElementById("password").value;
-            console.log("show =>", p1)
-            console.log("show =>", p2)
-            if(p1 === "foo" && p2 ==="bar"){
-                alert("Correct")
-            }
-            else{
-                alert("Incorrect")
-            }
-        };
-    </script>
+<body>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<div class="navbar navbar-light" style="background-color: #e3f2fd;">
+  <h4 style="color: #000033	; font-style: oblique;">Kimetsu no Yaiba Studio</h4>
+  <div>
+    <a style="text-decoration: none; text-align: right; font-size: 15px; margin-right: 10px;" href="https://www.playinone.com/zhaoyun/kimetsu-no-yaiba-characters-tanjiro/">แนะนำตัวละคร</a>
+    <a style="text-decoration: none; text-align: right; font-size: 15px; margin-right: 10px;" href="https://animekimi.com/anime/kimetsu-no-yaiba-th/">ดูย้อนหลัง</a>
+    <a style="text-decoration: none; text-align: right; font-size: 15px; margin-right: 5px;" href="default.asp">เกี่ยวกับฉัน</a>
+    <button type="button" class="btn btn-outline-primary btn-sm">เข้าสู่ระบบ</button>
+</div>
+</div>
+  
+<div class="container" style="text-align: center; margin-top: 10px;">
+<img src="https://mpics.mgronline.com/pics/Images/563000013460801.JPEG" alt="Kimetsu no Yaiba" style="width: 50%;height:50%;">
+</div>
+
+<div class="container-fluid" style=" margin-top: 15px;">
+    <div class="row">
+       <div class="col-8 card" style="background-color: rgb(195, 229, 240);text-align: center; ">
+        <h5 style="margin-top: 10px;">ดาบพิฆาตอสูร เดอะมูฟวี่ : ศึกรถไฟสู่นิรันดร์ </h5>
+        Kimetsu No Yaiba : Mugen Ressha-Hen”
+        <br>
+    <div>
+      <br>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/_ntCsO8N7jA" frameborder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+  </iframe>
+      <br>
+      <br>
+</div>
+      </div>
+
+       <div class="col-4 " > 
+        <div> 
+          <h5 style="text-align: center;"> Kimetsu No Yaiba : Mugen Ressha Hen </h5>
+             <h5 style="text-align: center;">ดาบพิฆาตอสูร เดอะมูฟวี่ ตอน ศึกรถไฟสู่นิรันดร์</h5>
+          แ
+      อนิเมะเวอร์ชั่นภาพยนตร์จะบอกเล่าเรื่องราวต่อจากมังงะเวอร์ชั่นหนังสือ เล่มที่ 7 หรือจากอนิเมะ ซีรีส์ตอนที่ 26 
+      เมื่อทันจิโร่ และเพื่อน ๆ นักล่าอสูรได้ฟื้นฟูสภาพร่างกายกลับมา หลังจากที่ได้ต่อสู้กับข้างแรม 5 เสร็จแล้ว 
+      พวกเขาก็ได้รับมอบหมายภารกิจใหม่ ให้เดินทางไปตรวจสอบการหายตัวอย่างลึกลับของเหล่าผู้คนบนรถไฟสายหนึ่ง 
+      และที่นั่นเอง เขาก็ได้พบกับ เร็นโกคุ เคียวจูโร่ เสาหลักแห่งไฟ ซึ่งเป็น 1 ใน 9 เสาหลัก 
+      โดยหารู้ไม่ว่าบนขบวนรถไฟนั้นมี 1 ในข้างแรม “เอ็นมุ” รอต้อนรับการมาของพวกเขาอยู่โดยที่ไม่มีใครรู้ตัว 
+      หรือว่าการต่อสู้ของพวกเขาในครั้งนี้ จะทำให้พวกเขาต้อง “สู่ห้วงแห่งความฝันอันเป็นนิรันดร์” ก็ยากที่จะมีใครรู้
+  </div>
+</div>
+</div>
+<br>
+<br>
+<div class="navbar" style="background-color: #e3f2fd;">
+  Kimetsu no Yaiba Studio ⓒ Sasithorn Sangsanid
+</div>
 </div>
 </body>
 </html>
