Creat Page Login and Register

--- a/Homework3/Home.html
+++ b/Homework3/Home.html
@@ -5,21 +5,21 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/Homework3/Home.css">
-
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script> -->
 </head>
 <body>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<div class="navbar navbar-light" style="background-color: #e3f2fd;">
-  <h4 style="color: #000033	; font-style: oblique;">Kimetsu no Yaiba Studio</h4>
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <div class="navbar navbar-light" style="background-color: #e3f2fd;">
+  <h4 >
+    <a style="color: #000033	; font-style: oblique;text-decoration: none;"href="Home.html">Kimetsu no Yaiba Studio</a></h4>
   <div>
     <a style="text-decoration: none; text-align: right; font-size: 15px; margin-right: 10px;" href="https://www.playinone.com/zhaoyun/kimetsu-no-yaiba-characters-tanjiro/">แนะนำตัวละคร</a>
     <a style="text-decoration: none; text-align: right; font-size: 15px; margin-right: 10px;" href="https://animekimi.com/anime/kimetsu-no-yaiba-th/">ดูย้อนหลัง</a>
     <a style="text-decoration: none; text-align: right; font-size: 15px; margin-right: 5px;" href="default.asp">เกี่ยวกับฉัน</a>
-    <button type="button" class="btn btn-outline-primary btn-sm">เข้าสู่ระบบ</button>
+    <a style="text-decoration: none; text-align: right; font-size: 15px; margin-right: 5px;" href="Login.html">  เข้าสู่ระบบ </a>
 </div>
 </div>
   
@@ -58,9 +58,6 @@
 </div>
 <br>
 <br>
-<div class="navbar" style="background-color: #e3f2fd;">
-  Kimetsu no Yaiba Studio ⓒ Sasithorn Sangsanid
-</div>
 </div>
 </body>
 </html>
