--- a/Homework3/Register.html
+++ b/Homework3/Register.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
     <body> 
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <div class="navbar navbar-light" style="background-color: #e3f2fd;">
   <h4 >
     <a style="color: #000033	; font-style: oblique;text-decoration: none;"href="Home.html">Kimetsu no Yaiba Studio</a></h4>
@@ -20,32 +20,33 @@
     <a style="text-decoration: none; text-align: right; font-size: 15px; margin-right: 5px;" href="Login.html">  เข้าสู่ระบบ </a>
 </div>
 </div>
-        <h1 style="text-align: center; margin-top: 15%;" >Login</h1>  
-        <div class="container" style="background-color:#dee7e7;text-align: center;width: 35%;">
+        <h1 style="text-align: center; margin-top: 15%;" >Register</h1>  
+        <div class="container" style="background-color:#dee7e7;text-align: center;width: 50%;height: 300px;">
          
         <link rel="stylesheet" href="index.css"> 
-        <div style="text-align: center; ">
-            <form action="">
-                <div class="input-group mb-2"  >
-                    <!-- <div class="input-group-prepend" style="margin-top:15px;">
-                        <div class="input-group-text">@</div>
-                    </div> -->
-                    <input type="text" class="form-control" id="username" placeholder="Username" style="margin-top:15px; ">
-                </div>
-                <div class="input-group mb-2">
-                    <!-- <div class="input-group-prepend">
-                        <div class="input-group-text">@</div>
-                    </div> -->
-                    <input type="text" class="form-control" id="password" placeholder="Password">
-                </div>
-
-            <div class="button">
-                <button type="button" class="btn btn-outline-success" style="margin-bottom: 10px;">Login</button>
-                <br>
-               <a href="Register.html">Register</a>
-
-            </div>
-            </form>
+        <div >
+            <form style="text-align:left;">
+  <div class="form-row">
+    <div class="form-group col-md-6" style="margin-top: 20px;">
+      <input type="name" class="form-control" id="inputName" placeholder="Name">
+    </div>
+    <div class="form-group col-md-6" style="margin-top: 20px;">
+      <input type="surname" class="form-control" id="inputSurname" placeholder="Surname">
+    </div>
+  </div>
+  <div class="form-group" >
+    <input type="text" class="form-control" id="inputEmail" placeholder="E-mail">
+  </div>
+  <div class="form-group">
+    <input type="text" class="form-control" id="inputPassword" placeholder="Password">
+  </div>
+   <div class="form-group">
+    <input type="text" class="form-control" id="inputConfirmPassword" placeholder="Confirm Password">
+  </div>
+   <div style="text-align: center;">
+  <button style="text-align: center;" type="submit" class="btn btn-primary">Register</button>
+  </div>
+</form>
         </div>
             <script>
     </script>
